# CodeSolAI

./: .gitignore  BLOG.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  pyproject.toml
src/codesolai/: __init__.py  cli.py  config.py  interactive_session.py  setup.py  spinner_manager.py  utils.py
src/codesolai/core/: __init__.py  agent.py  context_manager.py  conversation_manager.py  enhanced_agent.py  file_creation_helper.py  logger.py  reasoning_engine.py  task_manager.py  tool_registry.py
src/codesolai/providers/: __init__.py  base_provider.py  claude_provider.py  gemini_provider.py  gpt_provider.py  provider_manager.py
src/codesolai/tools/: __init__.py  analysis_tool.py  base_tool.py  exec_tool.py  filesystem_tool.py  network_tool.py
tests/: __init__.py  test_cli.py  test_config.py  test_providers.py  test_utils.py
